--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,5 @@
 body {
-    margin: 0px auto;
-    width: 98%;
-    height: 98%;
+
     /*background-color: #00FF00;*/
 }
 .content {
@@ -21,4 +19,13 @@ body {
 input {
     color: white;
     background-color: #32CD32;
+}
+#map {
+  height: 100%;
+  width: 100%;
+}
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
