--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,16 @@
-body {
-
+body, html, .row {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
     /*background-color: #00FF00;*/
 }
 .content {
     color: white;
     background-color: #00FF00;
     display: inline-block;
-    padding-top: 20%;
-    height: 98%;
-    padding-bottom: 20%;
-    padding-right: 5%;
-    padding-left: 5%;
+    padding: 20% 5%;
+    height: 100%;
 }
 .btn {
     color: #32CD32;
@@ -23,9 +23,4 @@ input {
 #map {
   height: 100%;
   width: 100%;
-}
-html, body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
 }
