--- a/mijnstyle.css
+++ b/mijnstyle.css
@@ -2,23 +2,6 @@
     SIDEBAR STYLE
 ----------------------------------------------------- */
 
-
-/* ---------------------------------------------------
-    CONTENT STYLE
------------------------------------------------------ */
-
-body,
-html {
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-}
-
-#map {
-    height: 100%;
-}
-
 .container .btn {
     position: absolute;
     top: 35px;
@@ -35,7 +18,55 @@ html {
     text-align: center;
 }
 
+.sidcontaint {
+    margin: 50% 5px;
+    text-align: center;
+}
+
+.sidcontaint p {
+    font-size: 80%;
+}
+
+.sidcontaint input {
+    border-radius: 24px;
+}
+
+.sidcontaint button {
+    border-radius: 24px;
+    width: 25%;
+}
+
+.sidcontaint a {
+    width: 90%;
+    border-radius: 24px;
+    border-style: solid;
+    border-color: white;
+}
+
 
 /* ---------------------------------------------------
-    MEDIAQUERIES
+    CONTENT STYLE
 ----------------------------------------------------- */
+
+#map {
+    height: 100%;
+    width: 100%;
+}
+
+
+/* ---------------------------------------------------
+    ************
+----------------------------------------------------- */
+
+body,
+html {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.container {
+    height: 100%;
+    width: 100%;
+}
