--- a/mijnstyle.css
+++ b/mijnstyle.css
@@ -19,7 +19,8 @@
 }
 
 .sidcontaint {
-    margin: 50% 5px;
+    height: 60%;
+    margin: 25% 5px;
     text-align: center;
 }
 
@@ -41,6 +42,11 @@
     border-radius: 24px;
     border-style: solid;
     border-color: white;
+}
+
+.sidbarfooter img {
+    width: 150px;
+    height: auto;
 }
 
 
