--- a/css/mijnstyle.css
+++ b/css/mijnstyle.css
@@ -18,6 +18,24 @@
      text-align: center;
  }
 
+ /* ===sidebar Banner buttons===== */
+
+ #sidbarbaner {
+     font-size: 14px;
+     margin-left: 15px;
+     margin-right: 15px;
+ }
+
+ #sidbarbaner .btn {
+     background-color: #4CAF50;
+     font-size: 25px;
+     float: right;
+     margin-top: -14px;
+ }
+
+
+ /* ================= */
+
  .sidcontaint {
      height: 60%;
      margin: 25% 5px;
@@ -47,6 +65,10 @@
  .sidbarfooter img {
      width: 150px;
      height: auto;
+ }
+
+ .sidcontaint form {
+     padding-bottom: 25px;
  }
 
 tr:hover {
